--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <p>My bio.</p>
     <p>My hobbies.</p>
     <p>My first paragraph.</p>
-    
+    <h1 style="color:blue;">This is a Blue Heading</h1>
   </body>
 </html>
