--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  <h1>my name is stephanie</h1>
     <p>My bio.</p>
     <p>My hobbies.</p>
-    <p>My first paragraph.</p>
-    <h1 style="color:blue;">This is a Blue Heading</h1>
+ <h1 style="color:blue;">my first paragrapgh</h1>
+   
   </body>
 </html>
