--- a/index.html
+++ b/index.html
@@ -11,10 +11,35 @@
     <![endif]-->
   </head>
   <body> 
- <h1>my name is stephanie</h1>
-    <p>My bio.</p>
-    <p>My hobbies.</p>
- <h1 style="color:blue;">my first paragrapgh</h1>
+ <!DOCTYPE html>
+<html>
+<head>
+<style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
+</head>
+<body>
+
+<h1>My name is Stephanie</h1>
+<p>This is my bio.</p>
+
+</body>
+</html>
+<img src="programming.gif" alt="Computer man" style="width:48px;height:48px;">
+
+<img src="smiley.gif" alt="Smiley face" style="float:right;width:180px;height:100px;">
+
+<ul>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul> 
+
+</body>
+</html>
+
    
   </body>
 </html>
