--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <html>
 <head>
 <style>
-body {background-color: powderblue;}
+body {background-color: purple;}
 h1   {color: blue;}
 p    {color: red;}
 </style>
@@ -39,7 +39,15 @@ p    {color: red;}
 
 </body>
 </html>
+<!DOCTYPE html>
+<html>
+<body>
 
+<h2>Spectacular Mountain</h2>
+<img src="pic_mountain.jpg" alt="Mountain View" style="width:304px;height:228px;">
+
+</body>
+</html>
    
   </body>
 </html>
