--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <html>
 <head>
 <style>
-body {background-color: purple;}
+body {background-color: powderblue;}
 h1   {color: blue;}
 p    {color: red;}
 </style>
