--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+   <link rel="stylesheet" type="text/css" href="styles.css"
     <meta charset="utf-8">
     <title>Page Title</title>
     <meta name="description" content="Webpage for xxxx">
