--- a/index.html
+++ b/index.html
@@ -21,30 +21,16 @@
 </head>
 <body>
 
-<h1>My name is Stephanie</h1>
-<p>This is my bio.</p>
-
-</body>
-</html>
+<h1>About Me </h1>
+<p> My Name is Stephanie Torres I was born on november 15 of 1999 in Chicago, illinois. Im the oldest of 6 kids including me, i also have a dog her name is 
+  marley. I attended Ortiz De Dominguez Elementary School Until third grade, and for fourth grade i attended T.TRoosevelt elemetary.</p>
 
 
 
-<ul>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
-</ul> 
-
-</body>
-</html>
-<!DOCTYPE html>
-<html>
-<body>
 
 
 
-</body>
-</html>
-   
+
+
   </body>
 </html>
