--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <body>
 
 <h1>About Me </h1>
-<p> My Name is Stephanie Torres I was born on november 15 of 1999 in Chicago, illinois. Im the oldest of 6 kids including me, i also have a dog her name is 
-  marley. I attended Ortiz De Dominguez Elementary School Until third grade, and for fourth grade i attended T.TRoosevelt elemetary.</p>
+<p> My Name is Stephanie Torres I was born on november 15 of 1999 in Chicago, Illinois. Im the oldest of 6 kids including me, i also have a dog her name is 
+  marley. I attended Ortiz De Dominguez Elementary School Until third grade, and for fourth grade i attended T.Roosevelt elemetary.</p>
 
 
 
