--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
 <!doctype html>
 <html>
-  <head>
-   <link rel="stylesheet" type="text/css" href="styles.css"
-    <meta charset="utf-8">
-    <title>Page Title</title>
-    <meta name="description" content="Webpage for xxxx">
-    <!-- http://meyerweb.com/eric/tools/css/reset/ -->
-    <link rel="stylesheet" href="css/reset/reset.css">
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
-    <![endif]-->
+  
+ 
   </head>
   <body> 
  <!DOCTYPE html>
@@ -22,10 +14,7 @@
 <body>
 
 <h1>About Me </h1>
-<p> My Name is Stephanie Torres I was born on november 15 of 1999 in Chicago, Illinois. Im the oldest of 6 kids including me, i also have a dog her name is 
-  marley. I attended Ortiz De Dominguez Elementary School Until third grade, and for fourth grade i attended T.Roosevelt elemetary.</p>
-
-
+<p> My Name is Stephanie Torres I was born on november 15 of 1999 in Chicago, Illinois. Im the oldest of 6 kids including me,
 
 
 
