--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!doctype html>
+
 <html>
 <head>
 <style>
-body {background-color: powderblue;}
-h1   {color: blue;}
-p    {color: red;}
+
+  body {background-color: powderblue;}
+
+  h1 {
+    color: Black;
+    font-family: verdana;
+    font-size: 300%;
+}
+p  {
+    color: white;
+    font-family: courier;
+    font-size: 160%;
+}
+  
 </style>
 </head>
 <body>
 
 <h1>About Me </h1>
-<p> My Name is Stephanie Torres I was born on november 15 of 1999 in Chicago, Illinois. Im the oldest of 6 kids including me,
+<p> My Name is Stephanie Torres I was born on november 15 of 1999 in Chicago, Illinois. Im the oldest of 6 kids including me.
 
 
 
