--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
 <head>
 <style>
 
-  body {background-color: powderblue;}
+  body {background-color: rgb(209, 151, 163);}
 
   h1 {
     color: Black;
-    font-family: verdana;
+    font-family:Chalkduster, fantasy;
     font-size: 300%;
 }
 p  {
     color: white;
-    font-family: courier;
+    font-family: Caflisch Script Pro, cursive;
     font-size: 160%;
+    border: 1px solid white;
+   padding: 30px;
 }
   
 </style>
@@ -22,7 +24,7 @@ p  {
 <body>
 
 <h1>About Me </h1>
-<p> My Name is Stephanie Torres I was born on november 15 of 1999 in Chicago, Illinois. Im the oldest of 6 kids including me.
+<p> My Name is Stephanie Torres I was born on november 15 of 1999 in Chicago, Illinois. Im the oldest of 6 kids including me. Im currently attending Morton East highschool, im a rising senior. 
 
 
 
