--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
 <style>
 
-  body {background-color: rgb(209, 151, 163);}
+  body {
+    background-image: url("gradient_bg.png");
+    background-repeat: repeat-x;
+}
 
   h1 {
     color: Black;
