--- a/index.html
+++ b/index.html
@@ -4,21 +4,23 @@
 <head>
 <style>
 
-  body {
+
+ 
+ 
+ body {
     background-image: url("gradient_bg.png");
     background-repeat: repeat-x;
 }
-
   h1 {
     color: Black;
     font-family:Chalkduster, fantasy;
     font-size: 300%;
 }
 p  {
-    color: white;
+    color: rgb(209, 151, 163) ;
     font-family: Caflisch Script Pro, cursive;
     font-size: 160%;
-    border: 1px solid white;
+    border: 1px solid black;
    padding: 30px;
 }
   
