--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ p  {
 
 <h1>About Me </h1>
 <p> My Name is Stephanie Torres I was born on november 15 of 1999 in Chicago, Illinois. Im the oldest of 6 kids including me. Im currently attending Morton East highschool, im a rising senior. 
- <image src="imghttps://github.com/stephanie002/stephanie002.github.io/tree/master/imageimg></image>
+ <img src="image/20031066_1930850383866402_1013090264_n.jpg"></img>
 
 
 
