--- a/index.html
+++ b/index.html
@@ -25,13 +25,21 @@ p  {
 }
   
 </style>
+ 
+ <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
 
 <h1>About Me </h1>
-<p> My Name is Stephanie Torres I was born on november 15 of 1999 in Chicago, Illinois. Im the oldest of 6 kids including me. Im currently attending Morton East highschool, im a rising senior. 
- <img src="image/20031066_1930850383866402_1013090264_n.jpg"></img>
-
+<div class="row">
+ <div class="col-md-6">
+ <p> My Name is Stephanie Torres I was born on november 15 of 1999 in Chicago, Illinois. Im the oldest of 6 kids including me. Im currently attending Morton East highschool, im a rising senior. 
+ </div>
+ <div class="col-md-6">
+  <img src="image/20031066_1930850383866402_1013090264_n.jpg"></img>
+ </div>
+ </div>
 
 
 
