--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ p  {
  <p> My Name is Stephanie Torres I was born on november 15 of 1999 in Chicago, Illinois. Im the oldest of 6 kids including me. Im currently attending Morton East highschool, im a rising senior. 
  </div>
  <div class="col-md-6">
+   height: 200px;
+    width: 50%;
   <img src="image/20031066_1930850383866402_1013090264_n.jpg"></img>
  </div>
  </div>
