--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
  
  
  body {
-    background-image: url("gradient_bg.png");
-    background-repeat: repeat-x;
+    background-color: lightblue;
 }
   h1 {
     color: Black;
