--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
 <style>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="scripts/inte.js" type ="text/javascript"></script>
 
- 
- 
  body {
-    background-color: lightblue;
+    background-color: powderblue;
+    background-repeat: repeat-x;
 }
   h1 {
     color: Black;
@@ -22,9 +23,9 @@ p  {
     border: 1px solid black;
    padding: 30px;
 }
-  
+
 </style>
- 
+
  <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
@@ -33,15 +34,9 @@ p  {
 <h1>About Me </h1>
 <div class="row">
  <div class="col-md-6">
- <p> My Name is Stephanie Torres I was born on november 15 of 1999 in Chicago, Illinois. Im the oldest of 6 kids including me. Im currently attending Morton East highschool, im a rising senior. 
+ <p> My Name is Stephanie... Torres I was born on november 15 of 1999 in Chicago, Illinois. Im the oldest of 6 kids including me. Im currently attending Morton East highschool, im a rising senior.
  </div>
  <div class="col-md-6">
-  <img src="image/20031066_1930850383866402_1013090264_n.jpg"></img>
+  <img  class="hide-on-click" src="image/20031066_1930850383866402_1013090264_n.jpg"></img>
  </div>
  </div>
-
-
-
-
-  </body>
-</html>
