--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <style>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="scripts/inte.js" type ="text/javascript"></script>
+<script src="scripts/portafolio.js" type ="text/javascript"></script>
 
  body {
     background-color: powderblue;
@@ -34,7 +34,7 @@ p  {
 <h1>About Me </h1>
 <div class="row">
  <div class="col-md-6">
- <p> class="hide-on-click "My Name is Stephanie Torres I was born on november 15 of 1999 in Chicago, Illinois. Im the oldest of 6 kids including me. Im currently attending Morton East highschool, im a rising senior.
+ <p> My Name is Stephanie... Torres I was born on november 15 of 1999 in Chicago, Illinois. Im the oldest of 6 kids including me. Im currently attending Morton East highschool, im a rising senior.
  </div>
  <div class="col-md-6">
   <img  class="hide-on-click" src="image/20031066_1930850383866402_1013090264_n.jpg"></img>
