--- a/index.html
+++ b/index.html
@@ -1,30 +1,44 @@
 <!doctype html>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="scripts/portafolio.js" type ="text/javascript"></script>
+
 <html>
 <head>
 <style>
 
+  body {
+    background-color:rgb(186, 105, 133);
+}
+  h1 {
+    color: powderblue;
+    font-family:Chalkduster, fantasy;
+    font-size: 300%;
+}
+  p{
+    color: rgb(209, 151, 163) ;
+    font-family: Caflisch Script Pro, cursive;
+    font-size: 160%;
+    border: 1px solid black;
+   padding: 30px;
+}
 
-<h1>About Me</h1>
+</style>
+</head>
 
-<body>
-<html>
+ <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+</head>
+<body style=background-color: rgb(186, 105, 133)>
 
-<div class=".col-md-4">
-
-<p/>This is the robot I was working on with my team, we were able to
-make the LED lights work
-and upload a song which just ended up sounding like a cicada.  </p>
-</div>
-
-<div class=".col-md-4">
-  <img  class="hide-on-click" src="image/20031066_1930850383866402_1013090264_n.jpg" <img height="266" width="434" src="image.gif"></img>
-  </div>
-
-
-
-
-</body>
-</html>
-
+<h1>About Me </h1>
+    <div class="row">
+    <div class="col-md-6">
+<p> My Name is Stephanie Torres I was born on november 15 of 1999 in Chicago, Illinois. Im the oldest of 6 kids including me and, Im currently attending Morton East highschool, im a rising senior.
+    </div>
+    <div class="col-md-6">
+    <img  class="hide-on-click" src="image/20031066_1930850383866402_1013090264_n.jpg" ></img>
+ </div>
+ </div>
+ </body>
 
